add notebook examples etc

--- a/example_notebooks/simulated_data_example.ipynb
+++ b/example_notebooks/simulated_data_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,8 @@
     "%cd /home/heza7322/PycharmProjects/missing-value-handling-in-carts\n",
     "from src.binary_tree import BinaryTree\n",
     "from src.trinary_tree import TrinaryTree\n",
-    "from src.weighted_tree import WeightedTree"
+    "from src.weighted_tree import WeightedTree\n",
+    "from src.common.functions import get_indices, calculate_loss, fit_response"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    train          test\n",
-      "se_majority  4.794639e-29  4.947625e-29\n",
-      "se_mia       4.794639e-29  4.947625e-29\n",
-      "se_trinary   4.794639e-29  4.947625e-29\n",
-      "se_weighted  4.794639e-29  4.947625e-29\n",
       "                    train          test\n",
       "se_majority  4.794639e-29  4.947625e-29\n",
       "se_mia       4.794639e-29  4.947625e-29\n",
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -187,16 +183,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 train       test\n",
-      "se_majority  67.506776  59.376511\n",
-      "se_mia       65.325973  61.341628\n",
-      "se_trinary   54.141415  51.164091\n",
-      "se_weighted  53.411952  49.447262\n"
+      "                  train        test\n",
+      "se_majority  271.923924  251.842019\n",
+      "se_mia       252.034822  232.682935\n",
+      "se_trinary   251.840413  240.678218\n",
+      "se_weighted  289.177976  276.399819\n"
      ]
     }
    ],
    "source": [
-    "prob_missing = 0.1\n",
+    "prob_missing = 0.5\n",
     "df_mcar_0 = df[features+['y','test']].copy()\n",
     "\n",
     "for feature in features:\n",
@@ -231,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    train       test\n",
-      "se_majority  4.794639e-29  61.375854\n",
-      "se_mia       4.794639e-29  61.375854\n",
-      "se_trinary   4.794639e-29  43.820025\n",
-      "se_weighted  4.794639e-29  42.273073\n"
+      "                    train        test\n",
+      "se_majority  4.794639e-29  270.578198\n",
+      "se_mia       4.794639e-29  270.578198\n",
+      "se_trinary   4.794639e-29  212.743006\n",
+      "se_weighted  4.794639e-29  208.331918\n"
      ]
     }
    ],
@@ -275,18 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 train       test\n",
-      "se_majority  45.799996  37.009799\n",
-      "se_mia       43.949097  38.847893\n",
-      "se_trinary   33.953077  29.802107\n",
-      "se_weighted  35.938042  31.737362\n"
+      "                  train        test\n",
+      "se_majority  206.998081  185.190907\n",
+      "se_mia       194.020826  175.477551\n",
+      "se_trinary   178.264739  161.702128\n",
+      "se_weighted  217.135247  203.910848\n"
      ]
     }
    ],
@@ -324,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +341,7 @@
       "se_majority  200.549208  210.010578\n",
       "se_mia        77.059600   77.576321\n",
       "se_trinary   137.624294  145.982582\n",
-      "se_weighted  197.176591  201.125329\n"
+      "se_weighted  164.377818  171.736046\n"
      ]
     }
    ],
@@ -384,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,16 +513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "cont_normal    0.576932\ncont_linear    0.148882\ncont_stairs    0.000000\ncat_version    0.120332\ncat_gender     0.153855\ndtype: float64"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.Series(data = get_feature_importance(trees_4['weighted']))\n"
+    "pd.Series(data = get_feature_importance(trees_4['trinary']))\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
