--- a/example_notebooks/simulated_data_example.ipynb
+++ b/example_notebooks/simulated_data_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "left_00 = df['cont_normal']<df['cont_normal'].quantile(0.7)\n",
-    "left_10 = df['cat_version'].isin(['basic','edftra'])\n",
+    "left_10 = df['cat_version'].isin(['basic','extra'])\n",
     "left_11 = df['cat_gender']=='male'\n",
     "left_20 = df['cont_stairs'] < df['cont_stairs'].quantile(0.4)\n",
     "left_21 = df['cont_stairs'] < df['cont_stairs'].quantile(0.4)\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,10 +137,10 @@
      "output_type": "stream",
      "text": [
       "                    train          test\n",
-      "se_majority  4.794639e-29  4.947625e-29\n",
-      "se_mia       4.794639e-29  4.947625e-29\n",
-      "se_trinary   4.794639e-29  4.947625e-29\n",
-      "se_weighted  4.794639e-29  4.947625e-29\n"
+      "se_majority  3.589419e-29  3.633867e-29\n",
+      "se_mia       3.589419e-29  3.633867e-29\n",
+      "se_trinary   3.589419e-29  3.633867e-29\n",
+      "se_weighted  3.589419e-29  3.633867e-29\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -184,19 +184,20 @@
      "output_type": "stream",
      "text": [
       "                  train        test\n",
-      "se_majority  271.923924  251.842019\n",
-      "se_mia       252.034822  232.682935\n",
-      "se_trinary   251.840413  240.678218\n",
-      "se_weighted  289.177976  276.399819\n"
+      "se_majority  280.196975  279.313777\n",
+      "se_mia       262.118131  259.413081\n",
+      "se_trinary   261.448324  259.827863\n",
+      "se_weighted  310.589013  311.533369\n"
      ]
     }
    ],
    "source": [
-    "prob_missing = 0.5\n",
-    "df_mcar_0 = df[features+['y','test']].copy()\n",
+    "missing_prob = 0.5\n",
+    "n_to_remove = int(missing_prob*n)\n",
+    "df_mcar_0 = df.copy()\n",
     "\n",
     "for feature in features:\n",
-    "    to_remove = np.random.binomial(1,prob_missing,len(df)) == 1\n",
+    "    to_remove = df_mcar_0.loc[~df_mcar_0[feature].isna()].sample(n_to_remove).index\n",
     "    df_mcar_0.loc[to_remove,feature] = np.nan\n",
     "\n",
     "# Fit trees_1\n",
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,10 +236,10 @@
      "output_type": "stream",
      "text": [
       "                    train        test\n",
-      "se_majority  4.794639e-29  270.578198\n",
-      "se_mia       4.794639e-29  270.578198\n",
-      "se_trinary   4.794639e-29  212.743006\n",
-      "se_weighted  4.794639e-29  208.331918\n"
+      "se_majority  3.589419e-29  358.602238\n",
+      "se_mia       3.589419e-29  358.602238\n",
+      "se_trinary   3.589419e-29  247.764116\n",
+      "se_weighted  3.589419e-29  246.028204\n"
      ]
     }
    ],
@@ -271,21 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  train        test\n",
-      "se_majority  206.998081  185.190907\n",
-      "se_mia       194.020826  175.477551\n",
-      "se_trinary   178.264739  161.702128\n",
-      "se_weighted  217.135247  203.910848\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature = 'cont_normal'\n",
     "df_mcar_2 = df[features+['y','test']].copy()\n",
@@ -320,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,21 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  train        test\n",
-      "se_majority  200.549208  210.010578\n",
-      "se_mia        77.059600   77.576321\n",
-      "se_trinary   137.624294  145.982582\n",
-      "se_weighted  164.377818  171.736046\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "missing_prob = sigm(df['cont_normal']-5)\n",
     "df_mcorr_0 = df[features+['y','test']].copy()\n",
@@ -380,21 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    train        test\n",
-      "se_majority  4.794639e-29  274.855985\n",
-      "se_mia       4.794639e-29  274.855985\n",
-      "se_trinary   4.794639e-29  145.982582\n",
-      "se_weighted  4.794639e-29  141.916863\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_mcorr_1 = df[features+['y','test']].copy()\n",
     "df_mcorr_1.loc[df_mcorr_1['test'],features] = df_mcorr_0.loc[df_mcorr_0['test'],features].copy()\n",
@@ -425,21 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  train        test\n",
-      "se_majority  302.754702  303.458527\n",
-      "se_mia       255.396989  259.029560\n",
-      "se_trinary   292.187928  293.225304\n",
-      "se_weighted  331.445445  332.133868\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "missing_prob = sigm(df['y']-5)\n",
     "df_im_0 = df[features+['y','test']].copy()\n",
@@ -475,21 +428,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    train        test\n",
-      "se_majority  4.794639e-29  474.246910\n",
-      "se_mia       4.794639e-29  474.246910\n",
-      "se_trinary   4.794639e-29  293.225304\n",
-      "se_weighted  4.794639e-29  305.014159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_im_1 = df[features+['y','test']].copy()\n",
     "df_im_1.loc[df_im_1['test'],features] = df_im_0.loc[df_im_0['test'],features].copy()\n",
@@ -513,17 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "cont_normal    0.576932\ncont_linear    0.148882\ncont_stairs    0.000000\ncat_version    0.120332\ncat_gender     0.153855\ndtype: float64"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "pd.Series(data = get_feature_importance(trees_4['trinary']))\n"
    ],
