--- a/example_notebooks/MCAR_examples_diabetes.ipynb
+++ b/example_notebooks/MCAR_examples_diabetes.ipynb
@@ -219,27 +219,28 @@
     "# Missingness of different frequencies ONLY in test data\n",
     "dfs_2 = {i: dfs[i].copy() for i in range(len(missing_probs))}\n",
     "for i in range(1,len(missing_probs)):\n",
-    "\n",
     "    dfs_2[i].loc[~dfs_2[i]['test']] = df.loc[~df['test']].copy()\n",
+    "\n",
+    "X_train = df.loc[~df['test'],features]\n",
+    "y_train = df.loc[~df['test'],'y']\n",
+    "fitted_trees = {}\n",
+    "for tree_name in tree_types:\n",
+    "    fitted_trees[tree_name] = copy.deepcopy(tree_types[tree_name])\n",
+    "    fitted_trees[tree_name].fit(X_train,y_train)\n",
     "\n",
     "# Fit trees\n",
     "results = pd.DataFrame(columns = [key for key in tree_types], index = missing_probs)\n",
     "for i,missing_prob in enumerate(missing_probs):\n",
     "    print(missing_prob)\n",
-    "    X_train = dfs_2[i].loc[~dfs_2[i]['test'],features]\n",
-    "    y_train = dfs_2[i].loc[~dfs_2[i]['test'],'y']\n",
     "    X_test  = dfs_2[i].loc[dfs_2[i]['test'],features]\n",
     "    y_test  = dfs_2[i].loc[dfs_2[i]['test'],'y']\n",
     "    for tree_name in tree_types:\n",
-    "        tree = copy.deepcopy(tree_types[tree_name])\n",
-    "        tree.fit(X_train,y_train)\n",
-    "\n",
-    "        y_hat = tree.predict(X_test)\n",
-    "        mse = (y_test!=y_hat).mean()\n",
+    "        y_hat = fitted_trees[tree_name].predict(X_test)\n",
+    "        mse = (y_test-y_hat).pow(2).mean()\n",
     "        results.loc[missing_prob,tree_name] = mse\n",
     "        print(tree_name)\n",
     "\n",
-    "(results-results.loc[0]).plot()"
+    "results.plot()"
    ],
    "metadata": {
     "collapsed": false
