--- a/example_notebooks/data_cleaning.ipynb
+++ b/example_notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 404,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "\n",
     "folder_path = '/home/heza7322/PycharmProjects/missing-value-handling-in-carts/example_notebooks/data_raw/'\n",
-    "output_folder_path = '/home/heza7322/PycharmProjects/missing-value-handling-in-carts/example_notebooks/data_clean/'"
+    "output_folder_path = '/home/heza7322/PycharmProjects/missing-value-handling-in-carts/example_notebooks/data_cleaned/'"
    ]
   },
   {
@@ -282,13 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 405,
    "outputs": [],
    "source": [
     "# glass\n",
     "df = pd.read_fwf(folder_path + 'glass.data',header = None)[0].str.split(',',expand=True)\n",
     "df.drop(0,axis=1,inplace=True)\n",
     "df.columns = ['RI','Na','Mg','Al','Si','K','Ca','Ba','Fe','y']\n",
+    "df['y'].replace({'':'4'},inplace=True)\n",
+    "\n",
     "for feature in df.columns[:-1]:\n",
     "    df[feature] = df[feature].astype(float)\n",
     "\n",
@@ -302,7 +304,7 @@
     "   '7': 'headlamps',\n",
     "},inplace=True)\n",
     "\n",
-    "df.dropna().to_csv(output_folder_path + 'glass_cleaned.csv')\n"
+    "df.dropna().to_csv(output_folder_path + 'glass.csv')"
    ],
    "metadata": {
     "collapsed": false
