more notebook stuff

--- a/example_notebooks/data_cleaning.ipynb
+++ b/example_notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# German credit score\n",
@@ -113,9 +113,9 @@
     "\n",
     "df['foreign'] = more_raw_data.pop(20).replace({'A201':'yes','A202':'no'})\n",
     "\n",
-    "df['y'] = more_raw_data.pop(21).replace({1: 'bad', 2:'good'})\n",
+    "df['y'] = more_raw_data[21].replace({'1': 'bad', '2':'good'})\n",
     "\n",
-    "df.dropna().to_csv(output_folder_path+'german_cleaned.csv')\n"
+    "df.dropna().to_csv(output_folder_path+'german_credit.csv')"
    ],
    "metadata": {
     "collapsed": false
