--- a/example_notebooks/data_cleaning.ipynb
+++ b/example_notebooks/data_cleaning.ipynb
@@ -402,6 +402,203 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "# loan prediction\n",
+    "df = pd.read_csv(folder_path + 'loan_train.csv')\n",
+    "df.drop('Loan_ID',axis=1,inplace=True)\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "df['Dependents'] = df['Dependents'].replace({'3+':'3'}).astype(float)\n",
+    "df.dtypes\n",
+    "\n",
+    "df['y'] = df.pop('Loan_Status')\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'loan_cleaned.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "# Boston housing\n",
+    "df = pd.read_csv(folder_path + 'BostonHousing.csv')\n",
+    "\n",
+    "df['y'] = df.pop('medv')\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'boston_housing.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "outputs": [],
+   "source": [
+    "# Black Friday\n",
+    "df = pd.read_csv(folder_path + 'black_friday.csv')\n",
+    "\n",
+    "df.drop(['User_ID','Product_ID','Product_Category_1','Product_Category_2','Product_Category_3'],axis=1,inplace=True)\n",
+    "\n",
+    "df['Age'] = df['Age'].replace({age_range: age_group for age_group,age_range in enumerate(sorted(df['Age'].unique()))})\n",
+    "\n",
+    "import string\n",
+    "df['Occupation'] = df['Occupation'].replace({number:letter for number,letter in enumerate(string.ascii_lowercase)})\n",
+    "\n",
+    "df['Stay_In_Current_City_Years'] = df['Stay_In_Current_City_Years'].replace({range: group for group,range in enumerate(sorted(df['Stay_In_Current_City_Years'].unique()))})\n",
+    "\n",
+    "df['y'] = df.pop('Purchase')\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'black_friday.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "outputs": [],
+   "source": [
+    "# Adult census\n",
+    "df = pd.read_csv(folder_path + 'adult.csv')\n",
+    "df.columns = [column.replace('.','_') for column in df.columns]\n",
+    "df = df.replace({'?':None}).dropna()\n",
+    "df.drop(['relationship','education'],axis=1,inplace=True)\n",
+    "df['y'] = df.pop('income').replace({'>50K':'low','<=50K':'high'})\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'income_census.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "outputs": [],
+   "source": [
+    "# titanic\n",
+    "df = pd.read_csv(folder_path + 'titanic.csv')\n",
+    "df['y'] = df.pop('Survived').replace({0:'no',1: 'yes'})\n",
+    "df['n_family'] = df['SibSp'] + df['Parch']\n",
+    "features = ['Pclass','Sex','Age','n_family','Fare','Embarked']\n",
+    "df = df[features + ['y']].dropna()\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'titanic.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "outputs": [],
+   "source": [
+    "# life expectancy\n",
+    "df = pd.read_csv(folder_path + 'Life Expectancy Data.csv')\n",
+    "df = df.loc[df['Year']==2015]\n",
+    "df.drop(['Year','Country','Alcohol','Hepatitis B','Total expenditure'],axis=1,inplace=True)\n",
+    "df['y'] = df.pop('Life expectancy ')\n",
+    "df.dropna(inplace=True)\n",
+    "df.to_csv(output_folder_path + 'life_expectancy.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "outputs": [],
+   "source": [
+    "# health insurance\n",
+    "df = pd.read_csv(folder_path + 'insurance.csv')\n",
+    "\n",
+    "df['y'] = df.pop('charges')\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'health_insurance.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "outputs": [],
+   "source": [
+    "# concrete\n",
+    "df = pd.read_csv(folder_path + 'Concrete_Data.csv')\n",
+    "\n",
+    "df['y'] = df.pop('strength')\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'cement.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "outputs": [],
+   "source": [
+    "# online data sharing\n",
+    "df = pd.read_csv(folder_path + 'OnlineNewsPopularity.csv')\n",
+    "df.columns = [column[1:] for column in df.columns]\n",
+    "\n",
+    "data_channel_cols = [column for column in df.columns if column[:len('data_channel_is')]=='data_channel_is']\n",
+    "df['data_channel'] = df[data_channel_cols].idxmax(axis=1).str[len('data_channel_is_'):]\n",
+    "df.drop(data_channel_cols, axis=1, inplace=True)\n",
+    "\n",
+    "weekday_cols = [column for column in df.columns if column[:len('weekday_is_')]=='weekday_is_']\n",
+    "df['weekday'] = df[weekday_cols].idxmax(axis=1).str[len('weekday_is_'):]\n",
+    "df.drop(weekday_cols,axis=1,inplace=True)\n",
+    "df.drop('is_weekend',axis=1,inplace=True)\n",
+    "\n",
+    "df['y'] = df.pop('shares')\n",
+    "df.head()\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'online_news.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
