new test notebooks

--- a/example_notebooks/data_cleaning.ipynb
+++ b/example_notebooks/data_cleaning.ipynb
@@ -593,9 +593,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "df = pd.read_fwf(folder_path + 'auto-mpg.data', header = None)\n",
+    "df.columns = ['mpg','cylinders','displacement','horsepower','weight','acceleration','model_year','origin','car_name']\n",
+    "df.replace({'?':None},inplace=True)\n",
+    "df.dropna(inplace=True)\n",
+    "df['horsepower'] = df['horsepower'].astype(float)\n",
+    "\n",
+    "df['y'] = df.pop('mpg')\n",
+    "\n",
+    "df.drop('car_name',axis=1,inplace=True)\n",
+    "df.to_csv(output_folder_path + 'auto_mpg.csv')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "df_red = pd.read_csv(folder_path + 'winequality-red.csv', sep = ';').assign(color='red')\n",
+    "df_white = pd.read_csv(folder_path + 'winequality-white.csv', sep = ';').assign(color='white')\n",
+    "\n",
+    "df = pd.concat([df_red,df_white])\n",
+    "\n",
+    "df['y'] = df.pop('quality').astype(float)\n",
+    "\n",
+    "df.to_csv(output_folder_path + 'wine_quality.csv')\n"
+   ],
    "metadata": {
     "collapsed": false
    }
