--- a/example_notebooks/MCAR_examples_real.ipynb
+++ b/example_notebooks/MCAR_examples_real.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,19 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Split candidates: 113.0\n"
+      "Split candidates: 2550\n"
      ]
     }
    ],
    "source": [
     "data_folder = 'example_notebooks/data_cleaned'\n",
-    "data_set = 'iris'\n",
+    "data_set = 'black_friday'\n",
     "\n",
     "# Load data\n",
     "df = pd.read_csv(f'{data_folder}/{data_set}.csv',index_col = 0)\n",
@@ -80,28 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0     26.994240\n",
-      "1     14.370199\n",
-      "2     72.636680\n",
-      "3           NaN\n",
-      "4           NaN\n",
-      "5           NaN\n",
-      "6           NaN\n",
-      "7           NaN\n",
-      "8           NaN\n",
-      "9           NaN\n",
-      "10          NaN\n",
-      "11          NaN\n",
-      "12          NaN\n",
-      "13          NaN\n",
+      "0     2.504927e+07\n",
+      "1     2.496037e+07\n",
+      "2     2.485831e+07\n",
+      "3     2.482554e+07\n",
+      "4     2.481466e+07\n",
+      "5     2.479482e+07\n",
+      "6     2.476815e+07\n",
+      "7     2.473055e+07\n",
+      "8     2.469927e+07\n",
+      "9     2.468002e+07\n",
+      "10    2.466015e+07\n",
+      "11    2.464389e+07\n",
+      "12    2.463989e+07\n",
+      "13    2.463998e+07\n",
       "dtype: float64\n",
-      "max_depth: 1\n"
+      "max_depth: 12\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
     "for max_depth in max_depths:\n",
     "    tree = BinaryTree(max_depth = max_depth, min_samples_leaf = min_samples_leaf)\n",
     "    tree.fit(X_train, y_train)\n",
-    "    if y_test.dtype == float:\n",
+    "    if tree.response_type == 'float':\n",
     "        y_hat = tree.predict(X_test)\n",
     "        loss = calculate_loss(y_test,y_hat = y_hat)\n",
     "    else:\n",
@@ -135,7 +135,7 @@
     "\n",
     "max_depth = losses.idxmin()\n",
     "\n",
-    "print(losses)\n",
+    "print(losses.loc[:max_depth+1])\n",
     "print(f'max_depth: {max_depth}')"
    ],
    "metadata": {
