Run some tests, find an error

--- a/example_notebooks/data_cleaning.ipynb
+++ b/example_notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# lymphography\n",
@@ -273,6 +273,8 @@
     "df['dislocation'] = raw_data[17].replace({str(i+1):cat for i,cat in enumerate(['no', 'yes'])})\n",
     "df['exclusion'] = raw_data[18].replace({str(i+1):cat for i,cat in enumerate(['no', 'yes'])})\n",
     "df['n_nodes'] = 4.5* (raw_data[19].astype(float)-1)*10\n",
+    "\n",
+    "df = df.loc[~df['y'].isin(['fibrosis','normal'])]\n",
     "\n",
     "df.dropna().to_csv(output_folder_path + 'lymphography_cleaned.csv')"
    ],
