edit gitignore etc

--- a/notebooks/stratified_fold_shuffle.ipynb
+++ b/notebooks/stratified_fold_shuffle.ipynb
@@ -22,8 +22,35 @@
     "    )\n",
     "data_set = 'titanic'\n",
     "X = pd.read_csv(f\"{data_folder}/{data_set}.csv\", index_col=0)\n",
-    "y = X.pop(\"y\")\n"
+    "y = X.pop(\"y\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[[None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None],\n [None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None,\n  None]]"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
